refactor: 重构 internal
