# internal/model/article.go
@@ -2,42 +2,40 @@ package model
 
 import (
 	"github.com/jinzhu/gorm"
-	"goblog/pkg/app"
+	"goblog/internal/dao"
 )
 
-type Article struct {
-	*Model
-	Title         string `json:"title"`
-	Desc          string `json:"desc"`
-	Content       string `json:"content"`
-	CoverImageUrl string `json:"cover_image_url"`
-	State         uint8  `json:"state"`
-}
-
-func (a *Article) TableName() string {
-	return "blog_article"
-}
-
-// 专门用于 swagger 显示返回值
-type ArticleSwagger struct {
-	List  []*Article
-	Pager *app.Pager
-}
-
-func (a *Article) Create(db *gorm.DB) (*Article, error) {
-	if err := db.Create(a).Error; err != nil {
+func (m *Model) CreateArticle(a *dao.Article) (*dao.Article, error) {
+	if err := m.engine.Create(a).Error; err != nil {
 		return nil, err
 	}
 	return a, nil
 }
 
-func (a *Article) Update(db *gorm.DB, values interface{}) error {
-	return db.Model(a).Updates(values).Where("id = ? and is_del = ?", a.ID, 0).Error
+func (m *Model) UpdateArticle(param *dao.Article) error {
+	article := dao.Article{Common: &dao.Common{ID: param.ID}}
+	values := map[string]interface{}{
+		"modified_by": param.ModifiedBy,
+		"state":       param.State,
+	}
+	if param.Title != "" {
+		values["Title"] = param.Title
+	}
+	if param.CoverImageUrl != "" {
+		values["cover_image_url"] = param.CoverImageUrl
+	}
+	if param.Desc != "" {
+		values["desc"] = param.Desc
+	}
+	if param.Content != "" {
+		values["content"] = param.Content
+	}
+	return m.engine.Model(&article).Updates(values).Where("id = ? and is_del = ?", article.ID, 0).Error
 }
 
-func (a *Article) Get(db *gorm.DB) (*Article, error) {
-	article := new(Article)
-	db = db.Where("id = ? and state = ? and is_del = ?", a.ID, a.State, 0)
+func (m *Model) GetArticle(id uint32, state uint8) (*dao.Article, error) {
+	article := new(dao.Article)
+	db := m.engine.Where("id = ? and state = ? and is_del = ?", id, state, 0)
 	// first 方法用于查询单条记录
 	err := db.First(article).Error
 	if err != nil && err != gorm.ErrRecordNotFound {
@@ -47,41 +45,33 @@ func (a *Article) Get(db *gorm.DB) (*Article, error) {
 }
 
 // list articles with pagination
-func (a *Article) ListArticles(db *gorm.DB, pageOffset, pageSize int) ([]*Article, error) {
-	var result []*Article
+func (m *Model) ListArticles(state uint8, pageOffset, pageSize int) ([]*dao.Article, error) {
+	var result []*dao.Article
+	db := m.engine
 	if pageOffset >= 0 && pageSize > 0 {
 		db = db.Offset(pageOffset).Limit(pageSize)
 	}
-	err := db.Where("state = ?", a.State).Find(&result).Error
+	err := db.Where("state = ? and is_del = ?", state, 0).Find(&result).Error
 	if err != nil {
 		return result, err
 	}
 	return result, nil
 }
 
-func (a *Article) Delete(db *gorm.DB) error {
-	return db.Where("id = ? and is_del = ?", a.ID, 0).Delete(a).Error
+func (m *Model) DeleteArticle(id uint32) error {
+	article := dao.Article{Common: &dao.Common{ID: id}}
+	return m.engine.Where("id = ? and is_del = ?", id, 0).Delete(&article).Error
 }
 
-func (a *Article) CountArticles(db *gorm.DB, state uint8) (int, error) {
+func (m *Model) CountArticles(state uint8) (int, error) {
 	var count int
-	err := db.Table(a.TableName()).Where("state = ?", state).Count(&count).Error
+	a := dao.Article{State: state}
+	err := m.engine.Table(a.TableName()).Where("state = ?", state).Count(&count).Error
 	return count, err
 }
 
-// 关联查询
-type ArticleRow struct {
-	ArticleID     uint32
-	TagID         uint32
-	TagName       string
-	Title         string
-	Desc          string
-	CoverImageUrl string
-	Content       string
-}
-
 // list articles by tag id
-func (a *Article) ListByTagID(db *gorm.DB, tagID uint32, pageOffset, pageSize int) ([]*ArticleRow, error) {
+func (m *Model) ListArticleByTID(tagID uint32, state uint8, pageOffset, pageSize int) ([]*dao.ArticleRow, error) {
 	fields := []string{
 		"ar.id as article_id",
 		"ar.title as article_title",
@@ -93,27 +83,28 @@ func (a *Article) ListByTagID(db *gorm.DB, tagID uint32, pageOffset, pageSize in
 		"t.id as tag_id",
 		"t.name as tag_name",
 	}...)
+	db := m.engine
 	if pageOffset >= 0 && pageSize > 0 {
 		db = db.Offset(pageOffset).Limit(pageSize)
 	}
 
-	articleTag := new(ArticleTag)
-	tag := new(Tag)
-	article := new(Article)
+	articleTag := new(dao.ArticleTag)
+	tag := new(dao.Tag)
+	article := new(dao.Article)
 	// select：指定要检索的字段，若不指定，则为 select *
 	// joins：指定关联查询的语句
 	// rows：执行sql语句并获取查询结果
 	rows, err := db.Select(fields).Table(articleTag.TableName()+" as at").
 		Joins("left join `"+tag.TableName()+"` as t on at.tag_id = t.id").
 		Joins("left join `"+article.TableName()+"` as ar on at.article_id = ar.id").
-		Where("at.`tag_id` = ? and ar.state = ? and ar.is_del = ?", tagID, a.State, 0).Rows()
+		Where("at.`tag_id` = ? and ar.state = ? and ar.is_del = ?", tagID, state, 0).Rows()
 	if err != nil {
 		return nil, err
 	}
 	defer rows.Close()
-	var articles []*ArticleRow
+	var articles []*dao.ArticleRow
 	for rows.Next() {
-		r := &ArticleRow{}
+		r := &dao.ArticleRow{}
 		if err := rows.Scan(
 			&r.ArticleID,
 			&r.Title,
@@ -130,14 +121,15 @@ func (a *Article) ListByTagID(db *gorm.DB, tagID uint32, pageOffset, pageSize in
 	return articles, nil
 }
 
-func (a *Article) CountByTagID(db *gorm.DB, tagID uint32) (int, error) {
+func (m *Model) CountArticleByTID(tagID uint32, state uint8) (int, error) {
 	var count int
-	articleTag := new(ArticleTag)
-	tag := new(Tag)
-	err := db.Table(articleTag.TableName()+" as at").
+	a := new(dao.Article)
+	articleTag := new(dao.ArticleTag)
+	tag := new(dao.Tag)
+	err := m.engine.Table(articleTag.TableName()+" as at").
 		Joins("left join `"+tag.TableName()+"` as t on at.tag_id= t.id").
 		Joins("left join `"+a.TableName()+"` as ar on at.article_id = ar.id").
-		Where("at.`tag_id` = ? and ar.state = ? and ar.is_del = ?", tagID, a.State, 0).
+		Where("at.`tag_id` = ? and ar.state = ? and ar.is_del = ?", tagID, state, 0).
 		Count(&count).Error
 	if err != nil {
 		return 0, err
