# internal/routers/api/v1/article.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"github.com/gin-gonic/gin"
 	"goblog/global"
+	"goblog/internal/request"
 	"goblog/internal/routers/api"
 	"goblog/internal/service"
 	"goblog/pkg/app"
@@ -20,12 +21,12 @@ func NewArticle() *Article {
 // @Summary 获取单个文章
 // @Produce json
 // @Param id path int true "文章ID"
-// @Success 200 {object} model.Article "成功"
+// @Success 200 {object} dao.Article "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [get]
 func (a *Article) Get(c *gin.Context) {
-	param := service.ArticleRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
+	param := request.ArticleRequest{ID: convert.StrTo(c.Param("id")).MustUint32()}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
@@ -50,13 +51,13 @@ func (a *Article) Get(c *gin.Context) {
 // @Param state query int false "状态"
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} model.ArticleSwagger "成功"
+// @Success 200 {object} dao.ArticleSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles_tag [get]
 func (a *Article) ListByTagID(c *gin.Context) {
 	// TODO: 如何支持多 tagID 的交集搜索
-	param := service.ArticleListByTIDRequest{}
+	param := request.ArticleListByTIDRequest{}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
@@ -80,12 +81,12 @@ func (a *Article) ListByTagID(c *gin.Context) {
 // @Param state query int false "状态"
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} model.ArticleSwagger "成功"
+// @Success 200 {object} dao.ArticleSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [get]
 func (a *Article) List(c *gin.Context) {
-	param := service.ArticleListRequest{}
+	param := request.ArticleListRequest{}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
@@ -105,19 +106,19 @@ func (a *Article) List(c *gin.Context) {
 
 // @Summary 创建文章
 // @Produce json
-// @Param tag_ids body []int true "标签ID列表"
+// @Param tag_ids body []int false "标签ID列表"
 // @Param title body string true "文章标题"
 // @Param desc body string true "文章简述"
 // @Param cover_image_url body string true "封面图片地址"
 // @Param content body string true "文章内容"
 // @Param created_by body int true "创建者"
 // @Param state body int false "状态"
-// @Success 200 {object} model.Article "成功"
+// @Success 200 {object} dao.Article "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [post]
 func (a *Article) Create(c *gin.Context) {
-	param := service.CreateArticleRequest{}
+	param := request.CreateArticleRequest{}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
@@ -138,18 +139,18 @@ func (a *Article) Create(c *gin.Context) {
 
 // @Summary 更新文章
 // @Produce json
-// @Param article_id body string false "文章ID"
+// @Param id param string false "文章ID"
 // @Param title body string false "文章标题"
 // @Param desc body string false "文章简述"
 // @Param cover_image_url body string false "封面图片地址"
 // @Param content body string false "文章内容"
 // @Param modified_by body string true "修改者"
-// @Success 200 {object} model.Article "成功"
+// @Success 200 {object} dao.Article "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [put]
 func (a *Article) Update(c *gin.Context) {
-	param := service.UpdateArticleRequest{ArticleID: convert.StrTo(c.Param("id")).MustUint32()}
+	param := request.UpdateArticleRequest{ArticleID: convert.StrTo(c.Param("id")).MustUint32()}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
@@ -175,7 +176,7 @@ func (a *Article) Update(c *gin.Context) {
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [delete]
 func (a *Article) Delete(c *gin.Context) {
-	param := service.DeleteArticleRequest{ArticleID: convert.StrTo(c.Param("id")).MustUint32()}
+	param := request.DeleteArticleRequest{ArticleID: convert.StrTo(c.Param("id")).MustUint32()}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
