# internal/routers/api/v1/tag.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"github.com/gin-gonic/gin"
 	"goblog/global"
+	"goblog/internal/request"
 	"goblog/internal/routers/api"
 	"goblog/internal/service"
 	"goblog/pkg/app"
@@ -27,12 +28,12 @@ func (t *Tag) Get(c *gin.Context) {
 // @Param state query int false "状态" Enums(0, 1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} model.TagSwagger "成功"
+// @Success 200 {object} dao.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [get]
 func (t *Tag) List(c *gin.Context) {
-	param := service.TagListRequest{}
+	param := request.TagListRequest{}
 	response := app.NewResponse(c)
 	// 入参校验
 	valid, errs := app.BindAndValid(c, &param)
@@ -43,7 +44,7 @@ func (t *Tag) List(c *gin.Context) {
 
 	svc := service.New(c.Request.Context())
 	pager := app.Pager{Page: app.GetPage(c), PageSize: app.GetPageSize(c)}
-	totalRows, err := svc.CountTag(&service.CountTagRequest{Name: param.Name, State: param.State})
+	totalRows, err := svc.CountTag(&request.CountTagRequest{Name: param.Name, State: param.State})
 	if err != nil {
 		global.Logger.Errorf(c, "svc.CountTag err: %v", err)
 		response.ToErrorResponse(errcode.ErrorCountTagFail)
@@ -64,12 +65,12 @@ func (t *Tag) List(c *gin.Context) {
 // @Param name body string true "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param created_by body string true "创建者" minlength(3) maxlength(100)
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} dao.Tag "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [post]
 func (t *Tag) Create(c *gin.Context) {
-	param := service.CreateTagRequest{}
+	param := request.CreateTagRequest{}
 	response := app.NewResponse(c)
 	valid, errs := app.BindAndValid(c, &param)
 	if !valid {
@@ -104,12 +105,12 @@ func (t *Tag) Create(c *gin.Context) {
 // @Param name body string false "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param modified_by body string true "修改者" minlength(3) maxlength(100)
-// @Success 200 {array} model.Tag "成功"
+// @Success 200 {array} dao.Tag "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [put]
 func (t *Tag) Update(c *gin.Context) {
-	param := service.UpdateTagRequest{
+	param := request.UpdateTagRequest{
 		ID: convert.StrTo(c.Param("id")).MustUint32(),
 	}
 	response := app.NewResponse(c)
@@ -138,7 +139,7 @@ func (t *Tag) Update(c *gin.Context) {
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [delete]
 func (t *Tag) Delete(c *gin.Context) {
-	param := service.DeleteTagRequest{
+	param := request.DeleteTagRequest{
 		ID: convert.StrTo(c.Param("id")).MustUint32(),
 	}
 	response := app.NewResponse(c)
